# tilewright

./: .gitignore  DESIGN.md  ONBOARDING.md  README.md  config.yml  pyproject.toml
.ai/docs/: DESIGN.md  FINDINGS.md  using-the-catalog.md
datasets/: broad_sigma.yml  cncs_incident_beam.yml  ls_static.yml
docs/: using-the-catalog.md
examples/datasets/: broad_sigma.yml  challenge.yml  nips3_9dof.yml
examples/manifests/CHALLENGE/: artifacts.parquet
examples/manifests/CNCS_incident_beam/: entities.parquet
examples/manifests/LCLS_RIXS_STATIC/: artifacts.parquet
manifests/BROAD_SIGMA/: artifacts.parquet  entities.parquet
manifests/CHALLENGE/: entities.parquet
manifests/CNCS_incident_beam/: artifacts.parquet  entities.parquet
manifests/LCLS_RIXS_STATIC/: artifacts.parquet  entities.parquet
skills/tcb-onboard/: SKILL.md
skills/tcb-onboard/reference/: onboarding.md
skills/tilewright-onboard/: SKILL.md
skills/tilewright-onboard/reference/: onboarding.md
skills/tilewright-register/: SKILL.md
skills/tilewright-register/reference/: self-hosted-server.md
tcb_min/: cli.py  client.py  manifest.py  register.py
tests/: proof.py  test_smoke.py  verify_live.py
tilewright/: cli.py  client.py  lazy_hdf5.py  manifest.py  register.py
