[project]
name = "tcb-min"
version = "0.3.0"
description = "Minimal Tiled catalog broker: YAML contract -> Parquet manifests -> HTTP registration"
requires-python = ">=3.11"
dependencies = [
    "tiled[server]>=0.2.9,<0.3",
    "h5py",
    "numpy",
    "pandas",
    "pyarrow",
    "PyYAML",
]

[project.scripts]
tcb = "tcb_min.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tcb_min"]
